--- a/docs/docker/media/Jellyseerr/docker-compose-example/docker-compose.yml
+++ b/docs/docker/media/Jellyseerr/docker-compose-example/docker-compose.yml
@@ -11,4 +11,5 @@ services:
       - 5055:5055
     volumes:
       - /path/to/appdata/config:/app/config
+    #! Make sure this is unless-stopped
     restart: unless-stopped
