--- a/docs/docker/kestra/example-docker-compose/docker-compose.yml
+++ b/docs/docker/kestra/example-docker-compose/docker-compose.yml
@@ -7,6 +7,7 @@ volumes:
 services:
   postgres:
     image: postgres
+    restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
     environment:
@@ -21,6 +22,7 @@ services:
 
   kestra:
     image: kestra/kestra:latest
+    restart: unless-stopped
     pull_policy: always
     # Note that this setup with a root user is intended for development purpose.
     # Our base image runs without root, but the Docker Compose implementation needs root to access the Docker socket
