--- a/docs/docker/Unifi-Voucher-Site/docker-compose.yml
+++ b/docs/docker/Unifi-Voucher-Site/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   app:
     image: glenndehaan/unifi-voucher-site:latest
+    restart: unless-stopped
     ports:
       - "3000:3000"
     environment:
@@ -10,21 +11,21 @@ services:
       # The port of your UniFi OS Console, this could be 443 or 8443
       UNIFI_PORT: 8443
       # The username of a local UniFi OS account
-      UNIFI_USERNAME: 'unifi-voucher'
+      UNIFI_USERNAME: 'voucher-manager'
       # The password of a local UniFi OS account
-      UNIFI_PASSWORD: 'Team-1501-Thrust'
+      UNIFI_PASSWORD: 'B105'
       # The UniFi Site ID
-      UNIFI_SITE_ID: 'Homelab'
+      UNIFI_SITE_ID: 'default'
       # The UniFi SSID where guests need to connect to (Used within templating and 'Scan to Connect')
       UNIFI_SSID: 'RTECH-Guest'
       # The UniFi SSID WPA/WPA2/WPA3 Password (Can be ignored for 'Open' networks) (Used within templating and 'Scan to Connect')
-      UNIFI_SSID_PASSWORD: 'Saxophone#1'
+      UNIFI_SSID_PASSWORD: ''
       # Toggle to enable/disable internal authentication
       AUTH_INTERNAL_ENABLED: 'true'
       # The password used to log in to the voucher portal Web UI
       AUTH_INTERNAL_PASSWORD: 'B105'
       # The Bearer token used for the API
-      AUTH_INTERNAL_BEARER_TOKEN: 'qEP1AE01CCLUoTGt3ZJBcXwIIu8HsaGI'
+      #AUTH_INTERNAL_BEARER_TOKEN: 'qEP1AE01CCLUoTGt3ZJBcXwIIu8HsaGI'
       # Toggle to enable/disable OIDC authentication
       AUTH_OIDC_ENABLED: 'false'
       # OIDC issuer base url provided by oauth provider. Example: https://auth.example.com/.well-known/openid-configuration
@@ -37,18 +38,18 @@ services:
       AUTH_OIDC_CLIENT_SECRET: ''
       # Disables the login/authentication for the portal and API
       AUTH_DISABLE: 'false'
-      # Voucher Types, format: expiration in minutes (required),single-use or multi-use vouchers value - '0' is for multi-use - '1' is for single-use (optional),upload speed limit in kbps (optional),download speed limit in kbps (optional),data transfer limit in MB (optional)
+      # Voucher Types, format: expiration in minutes (required),single-use or multi-use vouchers value - '0' is for multi-use - '1' is for single-use (optional),upload speed limit in kbps (optional),download speed limit in kbps (optional),data t>
       # To skip a parameter just but nothing in between the comma's
       # After a voucher type add a semicolon, after the semicolon you can start a new voucher type
-      VOUCHER_TYPES: '480,1,,,;'
+      VOUCHER_TYPES: '480,1,10,10,10;30,1,10,10,10;'
       # Allow users to create custom vouchers types within the UI
       VOUCHER_CUSTOM: 'true'
       # Enable/disable the Web UI
       SERVICE_WEB: 'true'
       # Enable/disable the API
-      SERVICE_API: 'true'
+      SERVICE_API: 'false'
       # Enable/disable the printer and set the preferred type, currently supported types: pdf, escpos
-      PRINTER_TYPE: ''
+      PRINTER_TYPE: 'pdf'
       # IP address to your network enabled ESC/POS compatible printer (Only required when using PRINTER_TYPE: 'escpos')
       PRINTER_IP: '192.168.1.1'
       # SMTP Mail from email address (optional)
@@ -60,9 +61,9 @@ services:
       # SMTP Mail use TLS? (optional)
       SMTP_SECURE: 'false'
       # SMTP Mail username (optional)
-      SMTP_USERNAME: ''
+      #SMTP_USERNAME: ''
       # SMTP Mail password (optional)
-      SMTP_PASSWORD: ''
+      #SMTP_PASSWORD: ''
       # Sets the application Log Level (Valid Options: error|warn|info|debug|trace)
       LOG_LEVEL: 'info'
       # Enables/disables translation debugging, when enabled only translation keys are shown
